# ProjectWizard

./: .gitignore  .gitmodules  CMakeLists.txt  ProjectWizard.kdev4  main.cpp  main.h
.kdev4/: ProjectWizard.kdev4
CLI/: CLI.cpp  CMakeLists.txt
GUI/: CMakeLists.txt  GUI.kdev4  README
GUI/.kdev4/: GUI.kdev4
GUI/src/: gui.cpp  gui.h  gui.ui  main.cpp
Linux-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  ProjectWizard.cbp  build.ninja  cmake_install.cmake  rules.ninja
